<resources>
    <string name="app_name">Flights</string>

    <!-- Strings related to main screen -->
    <string name="action_log_in">Log in</string>
    <string name="action_register">Register</string>
    <string name="action_view_offers">View offers</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_no_such_email">No registered user with such email</string>

    <!-- Strings related to register -->
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_birth_date">Birth date (yyyy-MM-dd)</string>
    <string name="prompt_repeat">Repeat password</string>
    <string name="error_wrong_format">The date is written in wrong format</string>
    <string name="error_pass_no_match">The passwords are not the same</string>

    <!-- Strings related to flights -->
    <string name="flight_duration">Duration</string>
    <string name="flight_departure">Departure</string>
    <string name="flight_arrival">Arrival</string>
    <string name="flight_from">From</string>
    <string name="flight_to">To</string>

    <!-- Strings related to search -->
    <string name="search_select_date">Select date bounds to search</string>
    <string name="search_select_city">Select city to search</string>
    <string name="search_min">Minimum bound</string>
    <string name="search_max">Maximum bound</string>
    <string name="any">&lt;Any&gt;</string>
    <string name="search">Search</string>

    <!-- Info for user -->
    <string name="info_my_flights">You have %1$s flights booked:</string>
    <string name="info_my_flights_empty">You do not have any flights booked yet.</string>
    <string name="info_search_results">Search yielded %1$s flights available:</string>
    <string name="info_search_results_empty">Your search did not yield any results.</string>

    <!-- Strings related to flight info dialog/fragment -->
    <string name="flight_info">Flight info</string>
    <string name="price">Price: %1$s€</string>
    <string name="purchase">Purchase</string>


    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
