<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/appbar_padding_top"
    android:paddingTop="@dimen/appbar_padding_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/flight_departure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/flight_departure"/>

            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/flight_arrival"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/flight_arrival"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/flight_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/flight_duration"/>

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/flight_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text=""/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/flight_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/flight_from"/>

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/flight_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/flight_to"/>

    </LinearLayout>

</LinearLayout>