<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".core.FlightInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/appbar_padding_top"
        android:paddingLeft="@dimen/appbar_padding_top"
        android:paddingRight="@dimen/appbar_padding_top"
        android:paddingTop="@dimen/appbar_padding_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/appbar_padding_top"
                    android:paddingLeft="@dimen/appbar_padding_top"
                    android:paddingRight="@dimen/appbar_padding_top"
                    android:paddingTop="@dimen/appbar_padding_top">

                    <TextView
                        android:id="@+id/info_flight_from"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/appbar_padding_top"
                        android:text="@string/flight_from"
                        android:textSize="24sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/info_flight_departure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/flight_departure"
                        android:textSize="20sp"
                        android:textStyle="italic" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/appbar_padding_top"
                    android:paddingLeft="@dimen/appbar_padding_top"
                    android:paddingRight="@dimen/appbar_padding_top"
                    android:paddingTop="@dimen/appbar_padding_top">

                    <TextView
                        android:id="@+id/info_flight_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/appbar_padding_top"
                        android:text="@string/flight_to"
                        android:textSize="24sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/info_flight_arrival"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/flight_arrival"
                        android:textSize="20sp"
                        android:textStyle="italic" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/appbar_padding_top"
                    android:paddingLeft="@dimen/appbar_padding_top"
                    android:paddingRight="@dimen/appbar_padding_top"
                    android:paddingTop="@dimen/appbar_padding_top">

                    <TextView
                        android:id="@+id/info_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/flight_duration"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/info_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/appbar_padding_top"
                android:paddingBottom="@dimen/appbar_padding_top"
                android:text="@string/price"
                android:textSize="25sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/info_purchase_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purchase"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
